# oreno-comicking-scrap

./: .env-example  .gitignore  README.md  pyproject.toml  requirements.txt
api/: openapi-comicking.yaml  openapi-jikan.json
src/comicking_scrap/: __init__.py  bot.py  bot_jikan.py  requirements.txt
