[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comicking-scrap"
dynamic = ["dependencies"]
version = "0.0.1"
readme = "README.md"

[project.scripts]
comicking-scrap = "comicking_scrap:main"

[tool.setuptools.dynamic]
dependencies = {file = [
    "src/comicking_scrap/requirements.txt"
]}

[tool.setuptools.packages.find]
where = [
    "src"
]
include = ["comicking_scrap*"]
